--- a/messageboard/static/css/style.css
+++ b/messageboard/static/css/style.css
@@ -1,7 +1,22 @@
-div {
-    height:100px;
-    width:500px;
-    background-color: blue;
-    margin-left: auto;
-    margin-right: auto;
+body {
+    background-color: #275E6D;
+}
+
+::-webkit-input-placeholder { /* WebKit browsers */
+    color:  rgba(19, 19, 19, 0.40);
+    font-style: italic;
+}
+:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
+    color:   rgba(19, 19, 19, 0.40);
+    opacity:  1;
+    font-style: italic;
+}
+::-moz-placeholder { /* Mozilla Firefox 19+ */
+    color:   rgba(19, 19, 19, 0.40);
+    opacity:  1;
+    font-style: italic;
+}
+:-ms-input-placeholder { /* Internet Explorer 10+ */
+    color:   rgba(19, 19, 19, 0.40);
+    font-style: italic;
 }
