more button1 things, might work decently now.

--- a/messageboard/static/css/index.css
+++ b/messageboard/static/css/index.css
@@ -87,8 +87,10 @@ button1 {
 
 button1:hover {
     background-color: #388844;
-    padding:10%;
-    font-size:100%;
+    float: right;
+    width: 120%;
+    font-size: 200%;
+    text-align: center;
 }
 
 button1:active {
